HtmlUi: Correct table header width if the columns are exactly as wide as the header itself. In this case no scrollbar should be displayed. / #162280

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/TableHeader.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/TableHeader.css
@@ -96,6 +96,12 @@
     color: @active-color;
     z-index: 1;
   }
+
+  &.filler {
+    padding: 0;
+    margin: 0;
+    border: 0;
+  }
 }
 
 .header-resize {
